Cascading Change Log

3.0.2 [unreleased]

  Fixed issue where child stats detail retrieval may not fetch final state of children.

  Fixed issue where c.s.FlowNodeStats node kind could be mislabeled.

  Fixed issue where c.u.ShutdownUtil could log a NPE if a hook is removed during JVM shutdown.

  Updated build to exclude jgrapht-ext, further isolation of jgrapht apis to support reliable shading.

  Fixed issue where c.f.p.ProcessFlow would not propagate the application name, version, tags, etc to the management
  services.

  Fixed issue where c.s.FlowStepStats#getProcessStatusURL() always returned null for Apache MapReduce and Tez platforms.

  Fixed issue on Apache Tez where a split before and subsequent splicing back into a c.p.HashJoin could create an
  invalid plan.

  Fixed issue with c.t.u.TupleHasher#ObjectHasher not being serializable.

  Fixed issue where an unreachable YARN timeline server could cause the application to fail.

  Fixed issue with NPE when retrieving Tez task status from timeline server.

3.0.1

  Fixed issue in c.f.t.p.Hadoop2TezFlowStepJob where the LocalResources were not passed to the AppMaster correctly
  causing ClassNotFoundException during split calculation for custom InputFormats.

3.0.0

  Updated Apache Hadoop 2 based sub-projects to 2.6.0.

  Updated c.f.h.ProcessFlow and related classes to be independent of the Hadoop platforms. The class has been moved to
  c.f.p.ProcessFlow.

  Added ability to specify counters to be logged cluster side when a slice has completed executing. See the
  c.f.FlowRuntimeProps class.

  Update build to support Gradle 2.3 by removing use of deprecated 1.x features/apis.

  Updated jgrapht to 0.9.1 so that all internal graphs can be backed by a j.u.IdentityHashMap.

  Added support for node level c.p.ConfigDef properties on both c.p.Pipe and c.t.Tap instances. Only the Tez platform
  is supported as there are no Map/Reduce independent node configurations on the MR platforms.
