@@ -148,25 +148,30 @@ public abstract class BaseHadoopNodeStats<JobStatus, Counters> extends FlowNodeS
     }
 
   @Override
-  public final synchronized void captureDetail( Type depth )
+  public final void captureDetail( Type depth )
     {
     boolean finished = isFinished();
 
     if( finished && hasCapturedFinalDetail )
       return;
 
-    if( !getType().isChild( depth ) )
-      return;
+    synchronized( this )
+      {
+      if( !getType().isChild( depth ) || !isDetailStale() )
+        return;
 
-    boolean success = captureChildDetailInternal();
+      boolean success = captureChildDetailInternal();
 
-    if( success )
-      logDebug( "captured remote node statistic details" );
+      markDetailCaptured(); // always mark to prevent double calls
 
-    if( allChildrenFinished )
-      logInfo( "all children are in finished state" );
+      if( success )
+        logDebug( "captured remote node statistic details" );
 
-    hasCapturedFinalDetail = finished && success && allChildrenFinished;
+      hasCapturedFinalDetail = finished && success && allChildrenFinished;
+
+      if( allChildrenFinished )
+        logInfo( "all {} children are in finished state, have captured final details: {}", sliceStatsMap.size(), hasCapturedFinalDetail );
+      }
     }
 
   /**
