@@ -2,6 +2,8 @@ Cascading Change Log
 
 3.0.2 [unreleased]
 
+  Fixed issues concerning detailed stats retrieval robustness for both MapReduce and Tez platforms.
+
   Fixed issue where child stats detail retrieval may not fetch final state of children.
 
   Fixed issue where c.s.FlowNodeStats node kind could be mislabeled.
